@@ -1,3 +1,3 @@
-<figure class="ui faded image">
+<figure class="ui image">
     <img src="[[+url]]" width="[[+width]]" height="[[+height]]" alt="[[+alt:htmlent]]">
 </figure>
