@@ -1,3 +1,4 @@
-Team regular=overviewRowTeamBasic
-Team regular (Card)=overviewRowTeamBasicCard
-Team compact=overviewRowTeamCompact
+Team member regular=overviewRowPersonBasic
+Team member regular (Card)=overviewRowPersonBasicCard
+Team member tile=overviewRowPersonTile
+Team member compact=overviewRowPersonCompact
