@@ -1,0 +1,8 @@
+.background.[[+alias]]:before {
+    background-image: url("[[ImagePlus? &value=`[[+tv.person_image]]` &type=`thumb`]]") !important;
+    opacity: 1;
+}
+.background.[[+alias]]:hover:before {
+    background-image: url("[[ImagePlus? &value=`[[+tv.person_image_loose]]` &type=`thumb`]]") !important;
+    opacity: 1;
+}
