@@ -1,3 +1,5 @@
-<div class="ui center aligned middle aligned container">
-    [[#[[*header_cta]].content]]
+<div class="ui grid container">
+    <div class="center aligned bottom aligned column">
+        [[#[[*header_cta]].content]]
+    </div>
 </div>
