@@ -1,3 +1,3 @@
-<section class="center aligned [[+column_type]] team">
+<section class="center aligned [[+column_type]] team" style="min-height: 300px;">
     [[!$[[+row_tpl]]]]
 </section>
