@@ -1,3 +1,3 @@
-<section class="[[+column_type]] portfolio">
+<section class="[[+column_type]] portfolio" style="min-height: 300px;">
     [[!$[[+row_tpl]]]]
 </section>
